--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,12 @@ heading: Get in touch today
 
 		<input type="submit" value="Send Message" />
 	</form>
+	
+	<form action="?" method="POST">
+	      <div class="g-recaptcha" data-sitekey="6LdBx6cZAAAAAMe_wkkY7LW70c-WV7otxd7FtLKK"></div>
+	      <br/>
+	      <input type="submit" value="Submit">
+    	</form>
 </div>
 
 <script type="text/javascript">
