--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,9 @@ title: Contact
 heading: Get in touch today
 ---
 
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
+
 <div class="contact-box">
 	<form action="{{ site.baseurl }}/contact-success/" method="post" class="contact-form">
 		<input type="hidden" name="_to" value="b.stec@hilltopalliance.com" />
