--- a/contact.html
+++ b/contact.html
@@ -21,13 +21,18 @@ heading: Get in touch today
 		<textarea name="message" id="message" placeholder="Enter your message..."></textarea>
 
 		<input type="submit" value="Send Message" />
+		
+	        <div class="g-recaptcha" data-sitekey="6LdBx6cZAAAAAMe_wkkY7LW70c-WV7otxd7FtLKK"></div>
+	        <br/>
+	        <input type="submit" value="Submit">
+		
 	</form>
 	
-	<form action="?" method="POST">
-	      <div class="g-recaptcha" data-sitekey="6LdBx6cZAAAAAMe_wkkY7LW70c-WV7otxd7FtLKK"></div>
+<!-- 	<form action="?" method="POST"> -->
+<!-- 	      <div class="g-recaptcha" data-sitekey="6LdBx6cZAAAAAMe_wkkY7LW70c-WV7otxd7FtLKK"></div>
 	      <br/>
-	      <input type="submit" value="Submit">
-    	</form>
+	      <input type="submit" value="Submit"> -->
+<!--     	</form> -->
 </div>
 
 <script type="text/javascript">
