--- a/contact.html
+++ b/contact.html
@@ -20,11 +20,11 @@ heading: Get in touch today
 		<label for="message">Message</label>
 		<textarea name="message" id="message" placeholder="Enter your message..."></textarea>
 
-		<input type="submit" value="Send Message" />
+<!-- 		<input type="submit" value="Send Message" /> -->
 		
 	        <div class="g-recaptcha" data-sitekey="6LdBx6cZAAAAAMe_wkkY7LW70c-WV7otxd7FtLKK"></div>
 	        <br/>
-	        <input type="submit" value="Submit">
+	        <input type="submit" value="Send Message">
 		
 	</form>
 	
