--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,10 @@ heading: Get in touch today
 
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
+<style>
+	.reCaptchaClass {margin-top: 1em;}
+</style>
+
 
 <div class="contact-box">
 	<form action="{{ site.baseurl }}/contact-success/" method="post" class="contact-form">
@@ -22,7 +26,7 @@ heading: Get in touch today
 
 <!-- 		<input type="submit" value="Send Message" /> -->
 		
-	        <div class="g-recaptcha" data-sitekey="6LdBx6cZAAAAAMe_wkkY7LW70c-WV7otxd7FtLKK"></div>
+	        <div class="reCaptchaClass g-recaptcha" data-sitekey="6LdBx6cZAAAAAMe_wkkY7LW70c-WV7otxd7FtLKK"></div>
 	        <br/>
 	        <input type="submit" value="Send Message">
 		
