--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,9 @@ heading: Get in touch today
 
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
-<style>
+<!-- <style>
 	.reCaptchaClass {margin-top: 1em;}
-</style>
+</style> -->
 
 
 <div class="contact-box">
@@ -26,7 +26,7 @@ heading: Get in touch today
 
 <!-- 		<input type="submit" value="Send Message" /> -->
 		
-	        <div class="reCaptchaClass g-recaptcha" data-sitekey="6LdBx6cZAAAAAMe_wkkY7LW70c-WV7otxd7FtLKK"></div>
+	        <div class="g-recaptcha" style="margin-top: 1em;" data-sitekey="6LdBx6cZAAAAAMe_wkkY7LW70c-WV7otxd7FtLKK"></div>
 	        <br/>
 	        <input type="submit" value="Send Message">
 		
