--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@ heading: Get in touch today
 		
 	        <div class="g-recaptcha" style="margin-top: 1.8em;" data-sitekey="6LdBx6cZAAAAAMe_wkkY7LW70c-WV7otxd7FtLKK"></div>
 	        <br/>
-	        <input type="submit" value="Send Message">
+	        <input type="submit" value="Send Message" style="margin-top: .2em;">
 		
 	</form>
 	
